--- a/package.json
+++ b/package.json
@@ -22,19 +22,21 @@
     "clean": "rm -rf node_modules lib"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
-    "@types/mocha": "^5.2.7",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "coveralls": "^3.1.0",
     "js-beautify": "^1.11.0",
-    "mocha": "^6.2.3",
-    "nock": "^10.0.6",
-    "nyc": "^14.1.1",
+    "mocha": "^7.1.2",
+    "nock": "^12.0.3",
+    "nyc": "^15.0.1",
     "source-map-support": "^0.5.19",
     "ts-node": "^8.9.1",
-    "tslint": "^5.20.1",
-    "typedoc": "^0.15.8",
+    "tslint": "^6.1.2",
+    "typedoc": "^0.17.6",
     "typescript": "^3.8.3"
   },
   "optionalDependencies": {},
@@ -53,5 +55,9 @@
     "@types/request-promise-native": "^1.0.17",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8"
+  },
+  "mocha": {
+    "require": ["ts-node/register", "source-map-support/register"],
+    "extension": ["ts"]
   }
 }
