--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.12",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.8",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "cors": "^2.8.5",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-semistandard": "^15.0.1",
@@ -41,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "express": "^4.17.1",
     "js-beautify": "^1.11.0",
     "mocha": "^8.1.0",
     "nock": "^13.0.3",
