--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,8 @@ cache:
     - node test v14
   before_script:
     - "npx ts-node test/util/server.ts &"
+    - npm install
+    - npm run build
   script:
     - "cd examples/imdb-api-react && yarn && yarn test; cd ../.."
     - "cd examples/imdb-api-node && npm install && node index.js; cd ../.."
