--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,11 +78,9 @@ cache:
   stage: integration
   image: node:14-alpine
   dependencies:
-    - node test v14
+    - node build v14
   before_script:
     - "npx ts-node test/util/server.ts &"
-    - npm install
-    - npm run build
   script:
     - "cd examples/imdb-api-react && yarn && yarn test; cd ../.."
     - "cd examples/imdb-api-node && npm install && node index.js; cd ../.."
